--- a/src/main/resources/com/styles/nexum.css
+++ b/src/main/resources/com/styles/nexum.css
@@ -947,39 +947,40 @@
 .text-main-title {
     -fx-font-size: 18px;
     -fx-font-weight: bold;
-    -fx-text-fill: -color-fg-default;
+    -fx-text-fill: #000000;
 }
 
 .text-currency-code {
     -fx-font-size: 14px;
     -fx-font-weight: 800; /* Extra Bold */
-    -fx-text-fill: -color-accent-emphasis;
+    -fx-text-fill: #a68b8b;
 }
 
 .text-data-label {
     -fx-font-size: 13px;
     -fx-font-weight: 500;
-    -fx-text-fill: -color-fg-default;
+    -fx-text-fill: #3a3a3a;
 }
 
 .text-sub-info {
     -fx-font-size: 11px;
     -fx-font-weight: normal;
-    -fx-text-fill: -color-fg-muted; /* Lighter color for secondary info */
+    -fx-text-fill: #3a3a3a; /* Lighter color for secondary info */
 }
 
 .text-rate-value {
     -fx-font-size: 16px;
     -fx-font-weight: bold;
-    -fx-text-fill: -color-success-emphasis; /* Green for financial rates */
+    -fx-text-fill: #56913d; /* Green for financial rates */
 }
 
 /* Card Styling */
 .currency-card {
     -fx-padding: 12;
-    -fx-background-color: -color-bg-default;
-    -fx-border-color: -color-border-muted;
+    -fx-background-color: #FFFFFF;
+    -fx-border-color: #c1c1c1;
     -fx-border-radius: 10;
     -fx-background-radius: 10;
+    -fx-border-width: 1px;
     -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.05), 10, 0, 0, 4);
 }
