adding Api & advanced feature

--- a/src/main/resources/tezfx/view/project-details.fxml
+++ b/src/main/resources/tezfx/view/project-details.fxml
@@ -40,6 +40,7 @@
                         <Button fx:id="kanbanTab" onAction="#onKanbanTabClicked" styleClass="tab-inactive" text="Kanban" />
                         <Button styleClass="tab-inactive" text="Discussion" />
                     </HBox>
+                    <Button onAction="#handleExportReport" styleClass="btn-secondary" text="Exporter le rapport" />
                     <VBox alignment="CENTER_RIGHT" spacing="5">
                         <HBox alignment="BOTTOM_RIGHT" spacing="10">
                             <Label styleClass="text-muted" text="Progress" />
